GNOME Bugzilla – Bug 612579
link error when no codecs are available
Last modified: 2010-04-08 12:55:16 UTC
I tried to read a DVD but w/o the correct codec installed. Totem explained me this and allowed to me to look on internet for more infos. If i click on the link it tries to open : file:///home/neoclust/Documents/%27http://www.gnome.org/projects/totem/#codecs%27
commit 2082669fb983e9a0ae79b99ef585691c25ee54af Author: Bastien Nocera <hadess@hadess.net> Date: Thu Apr 8 13:51:24 2010 +0100 Don't handle GtkLinkButton cliking ourselves GtkLinkButton already calls gtk_show_uri() itself when clicked, so no need to handle it ourselves. Should fix 2 web pages popping up (once for the URI hook, once for click handler), and avoid quoting problems. https://bugzilla.gnome.org/show_bug.cgi?id=612579
That should fix it, if it doesn't, then please reopen. The problem would be in GTK+.