Don't handle GtkLinkButton cliking ourselves

GtkLinkButton already calls gtk_show_uri() itself when clicked,
so no need to handle it ourselves.

Should fix 2 web pages popping up (once for the URI hook, once for
click handler), and avoid quoting problems.

https://bugzilla.gnome.org/show_bug.cgi?id=612579